--- a/README
+++ b/README
@@ -33,3 +33,7 @@ Sunshine!
 	http://openwrt.org
 
 
+это  первый  форк  драйверов  видоры  
+здесь  не  работает   отображение  в   вебе  подулюченных  устройств  по  вифи-  скоро починю
+здесь  мак  при  старте   рандомный- скоро починую
+  [Яндекс.Деньги]https://money.yandex.ru/to/410014027691291
