--- a/README
+++ b/README
@@ -37,8 +37,8 @@ Sunshine!
 здесь  не  работает   отображение  в   вебе  подулюченных  устройств  по  вифи-  скоро починю
 здесь  мак  при  старте   рандомный- скоро починую
 ```
-[![Donate](https://img.shields.io/badge/Donate-PayPal-green.svg)](https://money.yandex.ru/to/410014027691291)]
+[![Donate](https://img.shields.io/badge/Donate-PayPal-green.svg)](https://money.yandex.ru/to/410014027691291)
 ```
 ```
- [![Яндекс.Деньги](https://money.yandex.ru/to/410014027691291)]
- ```
+[![Яндекс.Деньги](https://money.yandex.ru/to/410014027691291)
+```
