--- a/README
+++ b/README
@@ -37,4 +37,4 @@ Sunshine!
 здесь  не  работает   отображение  в   вебе  подулюченных  устройств  по  вифи-  скоро починю
 здесь  мак  при  старте   рандомный- скоро починую
 
-[![Donate](https://img.shields.io/badge/style-plastic-green.svg?style=plastic](https://money.yandex.ru/to/410014027691291)
+[![Donate](https://img.shields.io/badge/style-plastic-green.svg?style=plastic](paypal.me/leksmax)
