--- a/README
+++ b/README
@@ -37,6 +37,6 @@ Sunshine!
 здесь  не  работает   отображение  в   вебе  подулюченных  устройств  по  вифи-  скоро починю
 здесь  мак  при  старте   рандомный- скоро починую
 
-![paypal](https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif)](https://paypal.me/leksmax)
+![paypal](https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif)](https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QQ7FWMZLJUFEQ)
 
 [![Donate](https://img.shields.io/badge/style-plastic-green.svg?style=plastic](paypal.me/leksmax)
